// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render Badge with icon in outline style 1`] = `
<div
  className="undefined tc-badge tc-badge-outline tc-badge-with-icon"
>
  <span
    className="undefined tc-badge-label tc-badge-label-with-icon"
  >
    Label 1
  </span>
  <button
    className="undefined tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`Badge should render Badge with icon in solid style 1`] = `
<div
  className="undefined tc-badge tc-badge-solid tc-badge-with-icon"
>
  <span
    className="undefined tc-badge-label tc-badge-label-with-icon"
  >
    Label 1
  </span>
  <button
    className="undefined tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`Badge should render Badge without icon in outline style 1`] = `
<div
  className="tc-badge tc-badge-outline"
>
  <span
    className="tc-badge-label"
  >
    Label 1
  </span>
</div>
`;

exports[`Badge should render Badge without icon in solid style 1`] = `
<div
  className="tc-badge tc-badge-solid"
>
  <span
    className="tc-badge-label"
  >
    Label 1
  </span>
</div>
`;
